# ai_swing_trading

./: .gitignore  CHANGELOG.md  README.md  dashboard.py  init_db.py  main.py  orchestrator.py  pyproject.toml  quick_start.py  start_dashboard.py  test_ai_signal.py  train_signal_models.py
ai/: __init__.py  enhanced_features.py  feature_store.py  inference.py  model_registry.py  profit_calculator.py  signal_models.py  train_model.py
automation/: __init__.py  scheduler.py
backtesting/: __init__.py  engine.py  models.py  runner.py
database/: models.py
docs/: AI_MODEL_STRATEGY.md  CODEBASE_SANITIZATION.md  HISTORICAL_DATA_LOADING.md  SIGNAL_MODELS_GUIDE.md
engine/: etl.py
engine/loaders/: nse_index_discovery.py  price_loader.py  profile_loader.py
execution/: __init__.py  executor.py  risk_manager.py
migrations/: __init__.py  add_index_isolation.py  add_index_support.py  add_index_to_model_registry.py  add_missing_trade_signal_columns.py  add_quantity_to_trade_signals.py  add_strategy_metadata_table.py  check_schema.py
strategies/: ai_signal_strategy.py  base.py  engine.py  hybrid.py  registry.py  technical.py
utils/: discover_nse_indices.py  index_reset.py  load_historical_data.py  sync_all_indices.py  watchlist_init.py
