[project]
name = "indian-stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "yfinance>=0.2.66",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "numpy>=1.26.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.9.0",
    "plotly>=5.22.0",
]
